[gd_scene format=3]

[ext_resource path="res://Scripts/PlayerDetails.gd" type="Script" id=1]

[node name="PlayerDetails" type="Control"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LabelTitle" type="Label" parent="VBoxContainer"]
text = "Информация об игроке"

[node name="LabelName" type="Label" parent="VBoxContainer"]
text = "Ник: "

[node name="LabelRole" type="Label" parent="VBoxContainer"]
text = "Роль: "

[node name="LabelStats" type="Label" parent="VBoxContainer"]
text = "Навыки: "

[node name="LabelMoraleEnergy" type="Label" parent="VBoxContainer"]
text = "Мораль / Энергия: "

[node name="ButtonBack" type="Button" parent="VBoxContainer"]
text = "Назад"
